# mcp-a2a-demo

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
agents/: general_assistant.json  math_specialist.json  news_specialist.json  weather_specialist.json
backend/: a2a_orchestrator.py  agent_server.py  agents.py  event_logger.py  human_news_agent.py  main.py  mcp_interceptor.py  mcp_server.py  token_tracker.py  token_usage.py  weather_mcp_server.py
frontend/: app.js  index.html  style.css
implementations/: MathSpecialist.mcp.json  WeatherSpecialist.mcp.json
